Closed Bug 625353 Opened 15 years ago Closed 15 years ago

Vertically flipped (upside down) text when using "show image" on a WebGL canvas element

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
Tracking Status
blocking2.0 --- final+

People

(Reporter: daniel, Assigned: vlad)

References

()

Details

(Whiteboard: [softblocker][fx4-fixed-bugday])

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b9pre) Gecko/20110112 Firefox/4.0b9pre Build Identifier: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b9pre) Gecko/20110112 Firefox/4.0b9pre I clicked the "view image" context menu option in the credits of the "flight of the navigator" demo. The image then shows the text vertically flipped. Reproducible: Always Steps to Reproduce: 1. Go to the "Flight of the navigator" demo (URL given) 2. Go to the end of the demo (simply click at the end in the timeline in the media player on top) 3. As soon as the credits text appears, select "View image" from the context menu.
David, I assume that is not wanted in the demo, right?
Just loading the page and doing: javascript:window.open(document.getElementById("creditCanvas").toDataURL()); void(0) in the url bar will show the same behavior. And I see this on Mac too. Is this canvas using a GL context? If so, is there a difference between GL and 2d contexts in terms of the y-ordering of the stored bits or something?
Actually, it looks like the context itself is responsible for producing the output stream. And I see similar upside-down behavior on http://webglsamples.googlecode.com/hg/aquarium/aquarium.html if I do this: javascript:window.open(document.getElementById("canvas").toDataURL()); void(0) So this is a gl context issue. Something somewhere is flipped and it's not unflipping it.... Requesting blocking, since this is a web-visible correctness bug in gl canvas...
Status: UNCONFIRMED → NEW
blocking2.0: --- → ?
Component: Canvas: 2D → Canvas: WebGL
Ever confirmed: true
OS: Windows 7 → All
QA Contact: canvas.2d → canvas.webgl
Hardware: x86 → All
Assignee: nobody → bjacob
blocking2.0: ? → final+
Whiteboard: [softblocker]
I viewed the demo, which is very neat by the way, and it is actually an entire horizontal axis flip, not a vertical flip.
Summary: Vertically flipped text when using "show image" on a canvas element → Vertically flipped (upside down) text when using "show image" on a WebGL canvas element
bah, y-flip annoyances...
Assignee: bjacob → vladimir
Attachment #508483 - Flags: review?(bjacob)
Attachment #508483 - Flags: review?(bjacob) → review+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
This worked fine on my mac, but on Windows 7 in a VM, it won't even load the demo. I get an error dialog saying: Could not initialise WebGL, sorry :-( In beta 10, it is able to at least load the demo and start. Reopening as this is a regression.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
We don't support WebGL (or any hardware acceleration) on VMs. Feel free to open a new bug on that, but this bug's fixed.
Status: REOPENED → RESOLVED
Closed: 15 years ago15 years ago
Resolution: --- → FIXED
(In reply to comment #9) > This worked fine on my mac, but on Windows 7 in a VM, it won't even load the > demo. > I get an error dialog saying: > > Could not initialise WebGL, sorry :-( > > In beta 10, it is able to at least load the demo and start. > > Reopening as this is a regression. I am using the current Nightly (2/4/11) on Windows 7 (NOT Virtual Machine) and it is working fine.
Joe and Chris: thanks. Sorry for the false alarm...
Verified with Mozilla/5.0 (X11; Linux i686; rv:2.0b12pre) Gecko/20110204 Firefox/4.0b12pre and nvidia drivers 260.19.36.
Status: RESOLVED → VERIFIED
Whiteboard: [softblocker] → [softblocker][fx4-fixed-bugday]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: