b=625353; webgl canvas "show image" upside down; r=bjacob, a=b